--- a/HW05/HW05.tex
+++ b/HW05/HW05.tex
@@ -186,26 +186,26 @@ MississippiSt & 0.0090671268847 \\
 \hline
 Team & Value \\
 \hline
-OhioState & 0.0356757203263 \\
-Oregon & 0.0292979320671 \\
-Alabama & 0.0239204810578 \\
-TCU & 0.0236056409908 \\
-UW-Whitewater & 0.0191553895457 \\
-FloridaSt & 0.0187911709573 \\
-MichiganSt & 0.0166595765885 \\
-Baylor & 0.0157327395 \\
-GeorgiaTech & 0.0151480610494 \\
-UCLA & 0.0137355513553 \\
-Mississippi & 0.0132373410973 \\
-Georgia & 0.0128562962337 \\
-Arizona & 0.0127962161082 \\
-ArizonaSt & 0.0116942892545 \\
-MississippiSt & 0.0115882512213 \\
-Missouri & 0.0109227285554 \\
-MountUnion & 0.01048154381 \\
-Clemson & 0.0103123184305 \\
-Wisconsin & 0.0102724621755 \\
-SouthernCal & 0.0102651556364 \\
+OhioState & 0.0363316355665 \\
+Oregon & 0.0298306907239 \\
+Alabama & 0.0243530549619 \\
+TCU & 0.0240409405987 \\
+FloridaSt & 0.0191361282377 \\
+UW-Whitewater & 0.0182123273704 \\
+MichiganSt & 0.0169569400722 \\
+Baylor & 0.0160206375044 \\
+GeorgiaTech & 0.0154243558734 \\
+UCLA & 0.0139841818668 \\
+Mississippi & 0.0134738824039 \\
+Georgia & 0.0130837202891 \\
+Arizona & 0.0130263839136 \\
+ArizonaSt & 0.0119023046243 \\
+MississippiSt & 0.0117965208801 \\
+Missouri & 0.0111035953543 \\
+Clemson & 0.0104986782094 \\
+SouthernCal & 0.0104490838612 \\
+Wisconsin & 0.0104461197528 \\
+Auburn & 0.0102624439426 \\
 \hline
 \end{tabular}
 \caption{Teams and values for t=200}
@@ -218,26 +218,26 @@ SouthernCal & 0.0102651556364 \\
 \hline
 Team & Value \\
 \hline
-OhioState & 0.0472737708834 \\
-Oregon & 0.0386971441277 \\
-Alabama & 0.0315958368555 \\
-TCU & 0.031317292759 \\
-FloridaSt & 0.0249231120778 \\
-MichiganSt & 0.0219207852619 \\
-Baylor & 0.0208339972713 \\
-GeorgiaTech & 0.0200625100155 \\
-UCLA & 0.0181228900719 \\
-Mississippi & 0.0174344644901 \\
-Georgia & 0.0169004740984 \\
-Arizona & 0.0168528192982 \\
-ArizonaSt & 0.0153643645 \\
-MississippiSt & 0.0152864883047 \\
-Missouri & 0.0141237034838 \\
-Clemson & 0.013628692964 \\
-SouthernCal & 0.0135103536879 \\
-Wisconsin & 0.0133401562399 \\
-Auburn & 0.013274678939 \\
-Utah & 0.0129068326338 \\
+OhioState & 0.0473971919558 \\
+Oregon & 0.0387971225418 \\
+Alabama & 0.0316777096693 \\
+TCU & 0.0313994942541 \\
+FloridaSt & 0.0249885243121 \\
+MichiganSt & 0.0219768459681 \\
+Baylor & 0.0208884123061 \\
+GeorgiaTech & 0.0201149670139 \\
+UCLA & 0.0181695841427 \\
+Mississippi & 0.0174792512804 \\
+Georgia & 0.0169436471106 \\
+Arizona & 0.0168959738481 \\
+ArizonaSt & 0.0154034382393 \\
+MississippiSt & 0.0153259619966 \\
+Missouri & 0.014157805926 \\
+Clemson & 0.0136641097675 \\
+SouthernCal & 0.013544901098 \\
+Wisconsin & 0.0133728015051 \\
+Auburn & 0.0133087636274 \\
+Utah & 0.0129390741129 \\
 \hline
 \end{tabular}
 \caption{Teams and values for t=1000}
@@ -250,6 +250,43 @@ Utah & 0.0129068326338 \\
 
 $||w_t - u_{1_{norm}}||_1$ as a function of $t$
 
-At $t_1000$, $||w_t - u_{1_{norm}}||_1 =  0.035755717237148765$
+At $t_1000$, $||w_t - u_{1_{norm}}||_1 =  0.031538506048135205$
+
+
+
+\section*{Problem 2 (Nonnegative Matrix Factorization)}
+
+\subsection*{Part 1, faces}
+
+\includegraphics[scale=.5]{images/obj_euc}
+
+Objective function for the Euclidean penalty, as function of iteration
+
+
+\includegraphics[scale=.5]{images/img1}
+
+Image 1
+
+\includegraphics[scale=.5]{images/img1_W19}
+
+$W_{19}$, corresponding to biggest value in H for image 1.
+
+\includegraphics[scale=.5]{images/img20}
+
+Image 20
+
+\includegraphics[scale=.5]{images/img20_W21}
+
+$W_{21}$, corresponding to biggest value in H for image 20.
+
+\includegraphics[scale=.5]{images/img500}
+
+Image 500
+
+\includegraphics[scale=.5]{images/img500_W10}
+
+$W_{10}$, corresponding to biggest value in H for image 500.
+
+\subsection*{Part 2, documents}
 
 \end{document}
