--- a/HW05/HW05.tex
+++ b/HW05/HW05.tex
@@ -289,4 +289,119 @@ $W_{10}$, corresponding to biggest value in H for image 500.
 
 \subsection*{Part 2, documents}
 
+\includegraphics[scale=.5]{images/obj_div}
+
+Objective function for the Divergence penalty, as function of iteration
+
+\begin{table}[!th]
+\centering
+\begin{tabular}{|c|c|cl}
+\hline
+Index & Word & Topic Probability \\
+\hline
+68  & police & 0.025167 \\
+89  & charge & 0.020731 \\
+7   & man & 0.016437 \\
+170 & officer & 0.014025 \\
+406 & crime & 0.013425 \\
+559 & arrest & 0.012996 \\
+18  & case & 0.010385 \\
+630 & prison & 0.010042 \\
+751 & criminal & 0.009908 \\
+405 & trial & 0.009796 \\
+\hline
+\end{tabular}
+\caption{Topic 1: Criminal Justice}
+\label{ex:table}
+\end{table}
+
+\begin{table}[!th]
+\centering
+\begin{tabular}{|c|c|cl}
+\hline
+Index & Word & Topic Probability \\
+\hline
+10  & school & 0.036812 \\
+59  & student & 0.027946 \\
+21  & child & 0.014908 \\
+283 & class & 0.012564 \\
+221 & community & 0.012147 \\
+14  & program & 0.012111 \\
+410 & education & 0.011804 \\
+11  & group & 0.011467 \\
+359 & college & 0.011248 \\
+508 & teacher & 0.010296 \\
+\hline
+\end{tabular}
+\caption{Topic 5: Education}
+\label{ex:table}
+\end{table}
+
+\begin{table}[!th]
+\centering
+\begin{tabular}{|c|c|cl}
+\hline
+Index & Word & Topic Probability \\
+\hline
+271  & food & 0.018212 \\
+877  & fresh & 0.012532 \\
+467  & restaurant & 0.010927 \\
+145  & serve & 0.010552 \\
+919  & taste & 0.009057 \\
+742  & eat & 0.008611 \\
+763  & dinner & 0.007397 \\
+1045 & cook & 0.007365 \\
+1079 & fish & 0.007356 \\
+42   & add & 0.007256 \\
+\hline
+\end{tabular}
+\caption{Topic 10: Restaurants}
+\label{ex:table}
+\end{table}
+
+\begin{table}[!th]
+\centering
+\begin{tabular}{|c|c|cl}
+\hline
+Index & Word & Topic Probability \\
+\hline
+50  & money & 0.017702 \\
+40  & pay & 0.016685 \\
+3   & state & 0.015025 \\
+183 & bill & 0.014939 \\
+258 & budget & 0.014762 \\
+135 & tax & 0.013915 \\
+92  & cut & 0.011469 \\
+87  & cost & 0.011361 \\
+14  & program & 0.010877 \\
+9   & plan & 0.010111 \\
+\hline
+\end{tabular}
+\caption{Topic 15: Government Budgeting}
+\label{ex:table}
+\end{table}
+
+\begin{table}[!th]
+\centering
+\begin{tabular}{|c|c|cl}
+\hline
+Index & Word & Topic Probability \\
+\hline
+1   & company & 0.039698 \\
+80  & sell & 0.019637 \\
+35  & market & 0.017051 \\
+132 & sale & 0.017008 \\
+37  & business & 0.016799 \\
+114 & share & 0.014053 \\
+113 & buy & 0.013014 \\
+70  & executive & 0.012504 \\
+141 & stock & 0.012028 \\
+171 & industry & 0.011061 \\
+\hline
+\end{tabular}
+\caption{Topic 20: Business}
+\label{ex:table}
+\end{table}
+
+
 \end{document}
