fixed error in RBF derivation

--- a/HW02/HW02.tex
+++ b/HW02/HW02.tex
@@ -185,7 +185,7 @@ K(u, v) = \int \frac{1}{(2\pi\beta^\prime)^{d/2}}e^{({- \frac{||u - t||^2}{2\bet
 Rearranging:
 
 \[
-K(u, v) = \frac{1}{(2\pi\beta^\prime)^{d/2}} \int \frac{1}{(2\pi\beta^\prime)^{d/2}}e^{({- \frac{||u - t||^2 + ||v - t||^2}{2\beta^\prime}})} dt
+K(u, v) = \int \frac{1}{(2\pi\beta^\prime)^{d/2}}e^{({- \frac{||u - t||^2 + ||v - t||^2}{2\beta^\prime}})} dt
 \]
 
 Focusing only on the terms in the exponent:
@@ -219,7 +219,7 @@ Then we complete the square:
 Placing this back into context:
 
 \[
-K(u, v) = \frac{1}{(2\pi\beta^\prime)^{d/2}} \int \frac{1}{(2\pi\beta^\prime)^{d/2}}e^{-\frac{1}{2\beta^\prime}(||t - \frac{u + v}{2}||^2 - ||\frac{u+v}{2}||^2 + \frac{||u||^2}{2} + \frac{||v||^2}{2})} dt
+K(u, v) = \int \frac{1}{(2\pi\beta^\prime)^{d/2}}e^{-\frac{1}{2\beta^\prime}(||t - \frac{u + v}{2}||^2 - ||\frac{u+v}{2}||^2 + \frac{||u||^2}{2} + \frac{||v||^2}{2})} dt
 \]
 
 Rearranging, we can form a Gaussian in $t$:
